default/objects/Custom_log__c/Custom_log__c.object-meta.xml
<CustomObject>
    <description>contains log of the process</description>
    <label>Log</label>
    <nameField>
        <displayFormat>Log-{0000000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>