default/objects/Custom_log__c/fields/E2E_Form_Ru_Data__c.field-meta.xml
<CustomField>
    <fullName>E2E_Form_Ru_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>reference to Form data object with business data</description>
    <inlineHelpText>reference to Form data object with business data</inlineHelpText>
    <label>E2E Form Ru Data</label>
    <referenceTo>E2EFormData__c</referenceTo>
    <relationshipLabel>Logs</relationshipLabel>
    <relationshipName>Logs</relationshipName>
    <type>Lookup</type>
</CustomField>