default/objects/Custom_log__c/fields/Errors__c.field-meta.xml
<CustomField>
    <fullName>Errors__c</fullName>
    <description>Errors and exceptions</description>
    <inlineHelpText>Errors and exceptions</inlineHelpText>
    <label>Errors</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>