default/objects/Custom_log__c/fields/External_user__c.field-meta.xml
<CustomField>
    <fullName>External_user__c</fullName>
    <description>User that made API call from another system</description>
    <inlineHelpText>User that made API call from another system</inlineHelpText>
    <label>External user</label>
    <length>100</length>
    <type>Text</type>
</CustomField>