default/objects/Custom_log__c/fields/INN__c.field-meta.xml
<CustomField>
    <fullName>INN__c</fullName>
    <description>Tax identification number</description>
    <inlineHelpText>Tax identification number</inlineHelpText>
    <label>INN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>