default/objects/Custom_log__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>datasource</description>
    <inlineHelpText>datasource</inlineHelpText>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>