default/objects/Custom_log__c/recordTypes/General.recordType-meta.xml
<RecordType>
    <fullName>General</fullName>
    <active>true</active>
    <description>Logs for any process</description>
    <label>General</label>
</RecordType>